<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewBookmark"
    android:background="@drawable/tint_background">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_bookmark_add_white_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="40dp"
        android:text="Add a Bookmark"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="40dp"
        android:text="The new bookmark will be added to your collection"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <EditText
        android:id="@+id/add_folder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="80dp"
        android:hint="Enter FolderName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/add_url_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="Enter URL"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/add"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="120dp"
        android:background="#D36473"
        android:text="ADD"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>
    

</LinearLayout>