...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/tint_background">

    <Button
        android:id="@+id/button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="300dp"
        android:background="@drawable/ic_library_books_white_24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_bookmark"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/ic_library_add_white_24dp"
        android:textStyle="bold"
...
